# validation/bookingValidation.js
@@ -1,10 +1,6 @@
 const Joi = require('joi');
-
+const paymentSchema = require('./paymentValidation');
 const bookingSchema = Joi.object({
-  user_id: Joi.number()
-    .integer()
-    .positive()
-    .required(),
 
   seat_id: Joi.number()
     .integer()
@@ -21,12 +17,10 @@ const bookingSchema = Joi.object({
     .positive()
     .required(),
 
-  booking_time: Joi.date()
-    .required(),
-
   status: Joi.string()
     .valid('booked', 'wait-list', 'cancelled')
-    .required()
+    ,
+    paymentDetails: paymentSchema
 });
 
 module.exports = bookingSchema;
